# hushai-android

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/offlineai/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/jni/: hush_llama_bridge.cpp
app/src/main/java/app/hushai/android/: ActionDetector.kt  ConversationDB.kt  DownloadScreen.kt  LLMEngine.kt  MainActivity.kt  ModelScreen.kt  NativeBridge.kt  OnboardingScreen.kt  PdfReader.kt
app/src/main/java/app/hushai/android/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/example/offlineai/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
